2007-10-10  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/build.py (BuildsResource.getChild): fix
	silly typo which prevented the Build page from ever offering
	control options like 'Stop Build'. Thanks to Aaron Hsieh for the
	catch. Closes #114.
	* buildbot/test/test_webparts.py (Webparts._do_page_tests): it'd
	be nice to test this

	* buildbot/__init__.py (version): bump to 0.7.6+ while between
	releases
	* docs/buildbot.texinfo: same

2007-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.6
	* docs/buildbot.texinfo: same

2007-09-30  Brian Warner  <warner@lothar.com>

	* NEWS: small updates, remove duplicate items from the 0.7.5 notes
	* setup.py: install all test files from buildbot/test/mail/* . Also
	update URL to point at buildbot.net
	* MANIFEST.in: update with new files

	* buildbot/status/web/baseweb.py (WebStatus.setupSite): ugh, yes
	auto-create an empty public_html directory, otherwise we get
	internal server errors instead of 404s.

	* README: reference buildbot.net, remove CVSToys section (does
	anyone still use it?)

	* buildbot/status/web/baseweb.py (WebStatus): emit a useful log
	message when public_html/ is missing (indicating that you should
	probably run 'upgrade-master'), and don't auto-create an empty
	directory in that case.

	* contrib/darcs_buildbot.py: refactor internals a bit, make it
	possible to use as an importable module (to make it easier to
	write some unit tests for it)

	* buildbot/status/web/baseweb.py (Waterfall.__init__): add a
	DeprecationWarning for Waterfall, advising users to switch over to
	WebStatus instead.

	* NEWS: update with user-visible changes since the last release

	* buildbot/status/web/waterfall.py
	(WaterfallStatusResource.get_reload_time): if the suggest a
	reload time of less than 15 seconds, give them 15 seconds instead
	of ignoring their request entirely, because that'd be confusing.
